--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="app/app.css">
   <script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-<body>
+<body ng-controller="MainController">
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -25,12 +25,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Issue Tracker Deluxe</a>
+      <a class="navbar-brand" href="#/">Issue Tracker Deluxe</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#/">Home <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -45,8 +45,8 @@
           </ul>
         </li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+      <ul ng-if="isAuthenticated()" class="nav navbar-nav navbar-right">
+        <li><a href="/" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
   </div>
@@ -65,6 +65,16 @@
   <script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="app/bower_components/angular/angular.js"></script>
   <script src="app/bower_components/angular-route/angular-route.js"></script>
+  <script src="app/bower_components/angular-cookies/angular-cookies.js"></script>  
+  
+  <script src="app/home/home-controller.js"></script>
+  
+  <script src="app/users/authentication.js"></script>
+  <script src="app/users/identity.js"></script>
+  
+  <script src="app/common/main-controller.js"></script>
+  
   <script src="app/app.js"></script>
+  
 </body>
 </html>
