--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,9 +1,10 @@
 <div class="row" ng-if="!isLogged()">
     <div class="col-md-3 col-md-offset-2 border-box">
+        <h3 class="text-center">Login</h3>
         <form name="userLoginForm">
             <div class="form-group">
-                <label for="username">Username: </label>
-                <input id="username" class="form-control" required="required" type="text" ng-model="user.Username" />
+                <label for="username">Email: </label>
+                <input id="username" class="form-control" required="required" type="email" ng-model="user.Username" />
             </div>
             <div class="form-group">
                 <label for="password">Password: </label>
@@ -13,5 +14,31 @@
                 <button ng-click="loginUser(user)" ng-disabled="userLoginForm.$invalid" class="btn btn-primary">LOGIN</button>
             </div>
         </form>
+    </div>
+    <div class="col-md-3 col-md-offset-1 border-box">
+        <h3 class="text-center">Register</h3>
+        <form name="userRegistrationForm">
+            <div class="form-group">
+                <label for="email">Email: </label>
+                <input id="email" class="form-control" required="required" type="email" ng-model="registerUser.Email" />
+            </div>
+            <div class="form-group">
+                <label for="registerPassword">Password: </label>
+                <input id="registerPassword" class="form-control" required="required" type="password" ng-model="registerUser.Password" />
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword">Confirm Password: </label>
+                <input id="confirmPassword" class="form-control" required="required" type="password" ng-model="registerUser.ConfirmPassword" />
+            </div>
+            <div class="form-group center-block">
+                <button ng-click="register(registerUser)" ng-disabled="userRegistrationForm.$invalid" class="btn btn-primary">REGISTER</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<div class="row" ng-if="isLogged()">
+    <div class="col-md-10 col-md-offset-1">
+        <h2 class="text-center">Welcome to the user dashboard!</h2>
     </div>
 </div>
