--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </li>
       </ul>
       <ul ng-if="isAuthenticated()" class="nav navbar-nav navbar-right">
-        <li><a href="/" ng-click="logout()">Logout</a></li>
+        <li><a href="#/" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
   </div>
