--- a/app/users/change-password.html
+++ b/app/users/change-password.html
@@ -1,22 +1,22 @@
 <div class="row">
     <div class="col-md-10 border-box">
-        <h3 class="text-center">Register</h3>
+        <h3 class="text-center">Change Password</h3>
         <form name="changePasswordForm">
             <div class="form-group">
                 <label for="oldPassword">Old Password: </label>
-                <input id="oldPassword" class="form-control" required="required" type="password" ng-model="changePassword.OldPassword" />
+                <input id="oldPassword" class="form-control" required="required" type="password" ng-model="changedPassword.OldPassword" />
             </div>
             <div class="form-group">
                 <label for="newPassword">New Password: </label>
-                <input id="newPassword" class="form-control" required="required" type="password" ng-model="changePassword.NewPassword" />
+                <input id="newPassword" class="form-control" required="required" type="password" ng-model="changedPassword.NewPassword" />
             </div>
             <div class="form-group">
                 <label for="confirmPassword">Confirm Password: </label>
-                <input id="confirmPassword" class="form-control" required="required" type="password" ng-model="registerUser.ConfirmPassword"
+                <input id="confirmPassword" class="form-control" required="required" type="password" ng-model="changedPassword.ConfirmPassword"
                 />
             </div>
             <div class="form-group center-block">
-                <button ng-click="changePassword(changePassword)" ng-disabled="changePasswordForm.$invalid" class="btn btn-primary">Change Password</button>
+                <button ng-click="changePassword(changedPassword)" ng-disabled="changePasswordForm.$invalid" class="btn btn-primary">Change Password</button>
             </div>
         </form>
     </div>
