--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="app/bower_components/angular-ui-notification/dist/angular-ui-notification.min.css">
   <link rel="stylesheet" href="app/app.css">
   <script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -34,6 +35,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#/">Home</a></li>
         <li ng-if="isAuthenticated()"><a href="#/profile/password">Change Password</a></li>
+        <li ng-if="isAdmin()"><a href="#/projects/add">Add New Project</a></li>
         <!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -69,6 +71,7 @@
   <script src="app/bower_components/angular-route/angular-route.js"></script>
   <script src="app/bower_components/angular-cookies/angular-cookies.js"></script>  
   <script src="app/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="app/bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
   
   <script src="app/common/main-controller.js"></script>
   <script src="app/common/session-storage.js"></script>
@@ -77,8 +80,12 @@
   
   <script src="app/issues/issues.js"></script>
   
+  <script src="app/projects/projects.js"></script>
+  <script src="app/projects/projects-controller.js"></script>
+  
   <script src="app/users/authentication.js"></script>
   <script src="app/users/identity.js"></script>
+  <script src="app/users/users.js"></script>
   <script src="app/users/change-password-controller.js"></script>
   <script src="app/users/logout-controller.js"></script>
   
