--- a/app/projects/project-add-modal.html
+++ b/app/projects/project-add-modal.html
@@ -3,9 +3,10 @@
     <form name="newProjectForm">
         <div class="form-group">
                 <label for="leader">Leader: </label>
-                <select id="leader" class="form-control" required="required" ng-model="newProject.LeadId">
+                <div md-autocomplete md-no-cache="true" md-selected-item="newProject.LeadId"></div>
+                <!--<select id="leader" class="form-control" required="required" ng-model="newProject.LeadId">
                     <option ng-repeat="user in users" value="{{user.Id}}">{{user.Username}}</option>
-                </select>
+                </select>-->
             </div>
             <div class="form-group">
                 <label for="projectKey">Project Key: </label>
