--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@
   -->
   <script src="app/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  
   <script src="app/bower_components/angular/angular.js"></script>
   <script src="app/bower_components/angular-route/angular-route.js"></script>
   <script src="app/bower_components/angular-cookies/angular-cookies.js"></script>  
+  <script src="app/bower_components/angular-aria/angular-aria.min.js"></script>
+  <script src="app/bower_components/angular-animate/angular-animate.min.js"></script>
+  <script src="app/bower_components/angular-material/angular-material.js"></script>
   <script src="app/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="app/bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
   
