--- a/app/projects/project-add-modal.html
+++ b/app/projects/project-add-modal.html
@@ -2,18 +2,26 @@
     <h2>Model</h2>
     <form name="newProjectForm">
         <div class="form-group">
-                <label for="leader">Leader: </label>
-                <div md-autocomplete md-no-cache="true" md-selected-item="newProject.LeadId"></div>
-                <!--<select id="leader" class="form-control" required="required" ng-model="newProject.LeadId">
+            <label for="leader">Leader: </label>
+            <div md-autocomplete md-selected-item="selectedUser" md-search-text="searchUser" md-min-length="2" md-items="item in searchUsers(searchUser)"
+                md-item-text="item.Username">
+                <span>{{item.Username}}</span>
+            </div>
+            <!--<select id="leader" class="form-control" required="required" ng-model="newProject.LeadId">
                     <option ng-repeat="user in users" value="{{user.Id}}">{{user.Username}}</option>
                 </select>-->
-            </div>
-            <div class="form-group">
-                <label for="projectKey">Project Key: </label>
-                <input id="projectKey" class="form-control" required="required" type="text" ng-model="newProject.ProjectKey" />
-            </div>
-            <div class="form-group">
-                <button class="btn btn-success" ng-disabled="newProjectForm.$invalid" ng-click="ok()">Create</button> <button class="btn btn-danger" ng-click="cancel()">Cancel</button>
-            </div>
+        </div>
+        <div class="form-group">
+            <label for="name">Name: </label>
+            <input id="name" class="form-control" required="required" type="text" ng-model="newProject.Name" />
+        </div>
+        <div class="form-group">
+            <label for="description">Description: </label>
+            <textarea id="description" class="form-control" required="required" type="text" ng-model="newProject.Description" />
+        </div>
+        <div class="form-group">
+            <button class="btn btn-success" ng-disabled="newProjectForm.$invalid" ng-click="ok()">Create</button>
+            <button class="btn btn-danger" ng-click="cancel()">Cancel</button>
+        </div>
     </form>
 </div>
