--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="app/bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="app/bower_components/angular-ui-notification/dist/angular-ui-notification.min.css">
+  <link rel="stylesheet" href="app/bower_components/angular-material/angular-material.css">
   <link rel="stylesheet" href="app/app.css">
   <script src="app/bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -71,8 +72,8 @@
   <script src="app/bower_components/angular/angular.js"></script>
   <script src="app/bower_components/angular-route/angular-route.js"></script>
   <script src="app/bower_components/angular-cookies/angular-cookies.js"></script>  
-  <script src="app/bower_components/angular-aria/angular-aria.min.js"></script>
-  <script src="app/bower_components/angular-animate/angular-animate.min.js"></script>
+  <script src="app/bower_components/angular-aria/angular-aria.js"></script>
+  <script src="app/bower_components/angular-animate/angular-animate.js"></script>
   <script src="app/bower_components/angular-material/angular-material.js"></script>
   <script src="app/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="app/bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
