Add Project modal should now be complete with labels and priorities, utilizing md-chips directive from Angular Material.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
   <script src="app/users/change-password-controller.js"></script>
   <script src="app/users/logout-controller.js"></script>
   
+  <script src="app/labels/labels.js"></script>
+  
   <script src="app/app.js"></script>
   
 </body>
