--- a/app/projects/project-add-modal.html
+++ b/app/projects/project-add-modal.html
@@ -1,23 +1,43 @@
-<div>
+<div class="form-container">
     <h2>Model</h2>
-    <form name="newProjectForm">
+    <form name="newProjectForm"> 
         <div class="form-group">
-            <label for="leader">Leader: </label>
-            <div md-autocomplete md-selected-item="selectedUser" md-search-text="searchUser" md-min-length="2" md-items="item in searchUsers(searchUser)"
-                md-item-text="item.Username">
+            <label for="leader">*Leader: </label>
+            <md-autocomplete  md-selected-item="selectedUser" md-search-text="searchUser" md-min-length="2" md-items="item in searchUsers(searchUser)"
+                md-item-text="item.Username" placeholder="Start typing a username, autocomplete after 2 letters are typed.">
                 <span>{{item.Username}}</span>
-            </div>
-            <!--<select id="leader" class="form-control" required="required" ng-model="newProject.LeadId">
-                    <option ng-repeat="user in users" value="{{user.Id}}">{{user.Username}}</option>
-                </select>-->
+            </md-autocomplete>
         </div>
         <div class="form-group">
-            <label for="name">Name: </label>
+            <label for="name">*Name: </label>
             <input id="name" class="form-control" required="required" type="text" ng-model="newProject.Name" />
         </div>
         <div class="form-group">
-            <label for="description">Description: </label>
+            <label for="description">*Description: </label>
             <textarea id="description" class="form-control" required="required" type="text" ng-model="newProject.Description" />
+        </div>
+        <div class="form-group">
+            <label for="labels">Labels: </label>
+            <md-chips ng-model="selectedLabels" md-autocomplete-snap md-transform-chip="transformChip($chip)" md-require-match="false">
+                <md-autocomplete  md-selected-item="selectedLabel" md-search-text="searchLabel" md-items="item in searchLabels(searchLabel)"
+                    md-item-text="item.Name" placeholder="Search for a label or add a new one">
+                    <span>{{item.Name}}</span>
+                </md-autocomplete>
+                <md-chip-template>
+                    <span>
+                        <strong>{{$chip.Name}}</strong>
+                    </span>
+                </md-chip-template>
+            </md-chips>
+        </div>
+        <div class="form-group">
+            <label for="priorities">*Priorities: </label>
+            <md-chips ng-model="selectedPriorities" md-transform-chip="transformChip($chip)" md-require-match="false" required="required">
+                <md-chip-template>
+                    <span>
+                        <strong>{{$chip.Name}}</strong>
+                    </span>
+                </md-chip-template></md-chips>
         </div>
         <div class="form-group">
             <button class="btn btn-success" ng-disabled="newProjectForm.$invalid" ng-click="ok()">Create</button>
