--- a/app/projects/single-project.html
+++ b/app/projects/single-project.html
@@ -6,8 +6,8 @@
         <p><strong>Name:</strong> {{project.Name}}</p>
         <p><strong>Description:</strong> {{project.Description}}</p>
         <p><strong>Project Lead:</strong> {{project.Lead.Username}}</p>
-        <p><strong>Labels:</strong> <span ng-repeat="label in project.Labels">{{label.Name}} </span></p>
-        <p><strong>Priorities:</strong> <span ng-repeat="priority in project.Priorities">{{priority.Name}} </span></p>
+        <p><strong>Labels:</strong> <span class="label label-success" ng-repeat="label in project.Labels">{{label.Name}}</span></p>
+        <p><strong>Priorities:</strong> <span class="label label-success" ng-repeat="priority in project.Priorities">{{priority.Name}}</span></p>
         <p ng-if="isProjectLead"><a href="#/projects/{{project.Id}}/edit" class="btn btn-primary">Edit</a> <button class="btn btn-primary">Add Issue</button></p>
     </div>
     <div class="col-md-8">
