--- a/app/projects/single-project.html
+++ b/app/projects/single-project.html
@@ -8,7 +8,10 @@
         <p><strong>Project Lead:</strong> {{project.Lead.Username}}</p>
         <p><strong>Labels:</strong> <span class="label label-success" ng-repeat="label in project.Labels">{{label.Name}}</span></p>
         <p><strong>Priorities:</strong> <span class="label label-success" ng-repeat="priority in project.Priorities">{{priority.Name}}</span></p>
-        <p ng-if="isProjectLead"><a href="#/projects/{{project.Id}}/edit" class="btn btn-primary">Edit</a> <button class="btn btn-primary">Add Issue</button></p>
+        <p ng-if="isProjectLead">
+            <a href="#/projects/{{project.Id}}/edit" class="btn btn-primary">Edit</a> 
+            <a href="#/projects/{{project.Id}}/add-issue" class="btn btn-primary">Add Issue</a>
+        </p>
     </div>
     <div class="col-md-8">
         <h2>Issues</h2>
