--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="#/">Home</a></li>
         <li ng-if="isAuthenticated()"><a href="#/profile/password">Change Password</a></li>
         <li ng-if="isAdmin()"><a href="#/projects/add">Add New Project</a></li>
+        <li ng-if="isAdmin()"><a href="#/projects">All Projects</a></li>
         <!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
