Add issue modal now working, added a temporary issue page, currently building it.

--- a/app/projects/project-add-modal.html
+++ b/app/projects/project-add-modal.html
@@ -1,5 +1,5 @@
 <div class="form-container">
-    <h2>Model</h2>
+    <h2>Add Project</h2>
     <form name="newProjectForm"> 
         <div class="form-group">
             <label for="leader">*Leader: </label>
