--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
   <script src="app/home/home-controller.js"></script>
   
   <script src="app/issues/issues.js"></script>
+  <script src="app/issues/issues-controllers.js"></script>
   
   <script src="app/projects/projects.js"></script>
   <script src="app/projects/projects-controller.js"></script>
