--- a/app/projects/project-add-issue-modal.html
+++ b/app/projects/project-add-issue-modal.html
@@ -1,1 +1,52 @@
-<h2>Add Issue</h2>
+<div class="form-container">
+    <h2>Add Issue</h2>
+    <form name="addIssueForm">
+        <div class="form-group">
+            <label for="leader">*Assignee: </label>
+            <md-autocomplete type="email" id="leader" md-selected-item="selectedUser" md-search-text="searchUser" md-min-length="2" md-items="item in searchUsers(searchUser)" md-item-text="item.Username" placeholder="Start typing a username, autocomplete after 2 letters are typed." required="required">
+                <span>{{item.Username}}</span>
+            </md-autocomplete>
+        </div>
+        <div class="form-group">
+            <label for="dueDate">*Due Date: </label>
+            <p class="input-group">
+                <input type="text" class="form-control" uib-datepicker-popup="dd-MM-yyyy" ng-model="newIssue.DueDate" ng-required="true" is-open="datePopup.isOpen" close-text="Close" />
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="openPopup()"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+            </p>
+        </div>
+        <div class="form-group">
+            <label for="priority">*Priority: </label>
+            <select id="priority" class="form-control" ng-model="newIssue.PriorityId">
+                <option ng-repeat="priority in priorities" value="{{priority.Id}}">{{priority.Name}}</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="labels">Labels: </label>
+            <md-chips ng-model="selectedLabels" md-autocomplete-snap md-transform-chip="transformChip($chip)" md-require-match="false" md-separator-keys="[32]">
+                <md-autocomplete  md-selected-item="selectedLabel" md-search-text="searchLabel" md-items="item in searchLabels(searchLabel)"
+                    md-item-text="item.Name" placeholder="Search for a label or add a new one">
+                    <span>{{item.Name}}</span>
+                </md-autocomplete>
+                <md-chip-template>
+                    <span>
+                        <strong>{{$chip.Name}}</strong>
+                    </span>
+                </md-chip-template>
+            </md-chips>
+        </div>
+        <div class="form-group">
+            <label for="title">*Title: </label>
+            <input id="title" class="form-control" required="required" type="text" ng-model="newIssue.Title" />
+        </div>
+        <div class="form-group">
+            <label for="description">*Description: </label>
+            <textarea id="description" class="form-control" required="required" type="text" ng-model="newIssue.Description" />
+        </div>
+        <div class="form-group">
+            <button class="btn btn-success" ng-disabled="addIssueForm.$invalid || !validateMdElements()" ng-click="ok()">Create</button>
+            <button class="btn btn-danger" ng-click="cancel()">Cancel</button>
+        </div>
+    </form>
+</div>
