--- a/app/projects/edit-project.html
+++ b/app/projects/edit-project.html
@@ -1,25 +1,25 @@
-<div class="form-container">
-    <h2>Add Project</h2>
-    <form name="newProjectForm"> 
-        <div class="form-group">
+<div class="row">
+    <h2 class="text-center">Edit Project Page</h2>
+    <form name="editProjectForm" ng-if="isProjectLeader || isAdmin()"> 
+        <div class="form-group" ng-if="isAdmin()">
             <label for="leader">*Leader: </label>
-            <md-autocomplete md-selected-item="selectedUser" md-search-text="searchUser" md-min-length="2" md-items="item in searchUsers(searchUser)"
+            <md-autocomplete md-selected-item="newValues.selectedUser" md-search-text="searchUser" md-min-length="2" md-items="item in searchUsers(searchUser)"
                 md-item-text="item.Username" placeholder="Start typing a username, autocomplete after 2 letters are typed." required="required">
                 <span>{{item.Username}}</span>
             </md-autocomplete>
         </div>
         <div class="form-group">
             <label for="name">*Name: </label>
-            <input id="name" class="form-control" required="required" type="text" ng-model="newProject.Name" />
+            <input id="name" class="form-control" required="required" type="text" ng-model="newValues.name" />
         </div>
         <div class="form-group">
             <label for="description">*Description: </label>
-            <textarea id="description" class="form-control" required="required" type="text" ng-model="newProject.Description" />
+            <textarea id="description" class="form-control" required="required" type="text" ng-model="newValues.description" />
         </div>
         <div class="form-group">
             <label for="labels">Labels: </label>
             <md-chips ng-model="selectedLabels" md-autocomplete-snap md-transform-chip="transformChip($chip)" md-require-match="false" md-separator-keys="[32]">
-                <md-autocomplete  md-selected-item="selectedLabel" md-search-text="searchLabel" md-items="item in searchLabels(searchLabel)"
+                <md-autocomplete md-selected-item="selectedLabel" md-search-text="searchLabel" md-items="item in searchLabels(searchLabel)"
                     md-item-text="item.Name" placeholder="Search for a label or add a new one">
                     <span>{{item.Name}}</span>
                 </md-autocomplete>
@@ -40,7 +40,7 @@
                 </md-chip-template></md-chips>
         </div>
         <div class="form-group">
-            <button class="btn btn-success" ng-disabled="newProjectForm.$invalid || !validateMdElements()" ng-click="ok()">Create</button>
+            <button class="btn btn-success" ng-disabled="editProjectForm.$invalid" ng-click="editProject()">Edit Project</button>
             <button class="btn btn-danger" ng-click="cancel()">Cancel</button>
         </div>
     </form>
