--- a/app/issues/single-issue.html
+++ b/app/issues/single-issue.html
@@ -17,3 +17,24 @@
         <p ng-if="isProjectLeader || isAssignee"><a href="#/issues/{{issue.Id}}/edit" class="btn btn-success">Edit Issue</a></p>
     </div>
 </div>
+<div class="row">
+    <hr />
+    <h3 class="text-center">Comments</h3>
+    <form ng-if="isProjectLeader || hasIssueInProject" name="addCommentForm">
+        <div class="form-group input-group">
+            <textarea ng-model="newComment.Text" class="form-control custom-control" required rows="5"></textarea> 
+            <span class="input-group-addon btn btn-primary" ng-click="addCommentForm.$invalid || addComment()" ng-disabled="addCommentForm.$invalid">Add Comment</span>
+        </div>
+    </form>
+</div>
+<div class="row">
+    <div ng-repeat="comment in comments" class="panel panel-primary" >
+        <div class="panel-heading">
+            <div class="align-left">{{comment.Author.Username}}</div> <div class="align-right">{{comment.CreatedOn | date:'dd-MM-yyyy HH:mm:ss'}}</div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="panel-body">
+            <p>{{comment.Text}}</p>
+        </div>
+    </div>
+</div>
